Slight restructuring, preparing for modules

--- a/angry-play.html
+++ b/angry-play.html
@@ -4,7 +4,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/2.3.10/seedrandom.min.js"></script>
 	<script src="blossom.js"></script>
 	<script src="eulerian-trail.js"></script>
-	<script src="angry-play.js"></script>
+	<script src="christofides-serdyukov.js"></script>
 </head>
 <body style="background-color: black">
 </body>	
